--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -46,8 +46,7 @@ Supported variables
   {%- assign card_class = card_class | append: 'product-card--show-secondary-media' -%}
 {%- endif -%}
 
-<product-card
-  handle="{{ product.handle | escape }}"
+<product-card handle="{{ product.handle | escape }}"
   {% if reveal %}reveal-js{% endif %}
   {% render 'surface', class: card_class, background: card_background, text_color: card_text_color %}>
   {%- comment -%}
@@ -130,8 +129,7 @@ Supported variables
               {%- render 'button', content: quick_add_label, aria_controls: quick_buy_id -%}
             </div>
 
-            <quick-buy-drawer
-              id="{{ quick_buy_id }}"
+            <quick-buy-drawer id="{{ quick_buy_id }}"
               header-bordered
               open-from="bottom"
               handle="{{ product.handle }}"
@@ -171,17 +169,14 @@ Supported variables
       {%- if show_rating and show_vendor == false or product.vendor == blank -%}
         <div class="rating-with-text">
           <span class="product-card__title">
-
             <a
               href="{{ product.url }}"
               class="bold"
               data-instant>{{ product.title }}</a>
-
           </span>
 
           {%- if text_alignment != 'center' -%}
             {%- capture rating_class -%}
-              {%- render 'price-list', product: product, text_alignment: text_alignment -%}
               {% if mobile_reduced %}hidden sm:flex{% endif %}
             {%- endcapture -%}
             {%- render 'product-rating', product: product, class: rating_class, display_mode: settings.product_rating_mode -%}
