--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -179,12 +179,14 @@ Supported variables
 
           {%- render 'price-list', product: product, text_alignment: text_alignment -%}
 
+          {% comment %}  
           {%- if text_alignment != 'center' -%}
-            {%- capture rating_class -%}
-              {% if mobile_reduced %}hidden sm:flex{% endif %}
-            {%- endcapture -%}
-            {%- render 'product-rating', product: product, class: rating_class, display_mode: settings.product_rating_mode -%}
+          {%- capture rating_class -%}
+          {% if mobile_reduced %}hidden sm:flex{% endif %}
+          {%- endcapture -%}
+          {%- render 'product-rating', product: product, class: rating_class, display_mode: settings.product_rating_mode -%}
           {%- endif -%}
+          {% endcomment %}
         </div>
       {%- else -%}
         <span class="product-card__title">
