new detail added

--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -204,6 +204,17 @@ Supported variables
     </div>
 
 
+    <div class="brand_collection_image">
+      <div class="brand_collection_one">
+        <p>
+          <i class="fa fa-coffee" style="font-size:16px"></i>&nbsp; 20 cups</p>
+      </div>
+      <div class="brand_collection_one">
+        <p><img src="https://cdn.shopify.com/s/files/1/0024/6759/4339/files/102737002-prescription-pills-bottle-linear-icon-thin-line-illustration-medications-contour-symbol-vector-isola-removebg-preview.png?v=1628359070" style="font-size:16px">&nbsp; 250 gms</p>
+      </div>
+    </div>
+
+
     {%- if show_rating and mobile_reduced or text_alignment == 'center' -%}
       {%- capture rating_class -%}
         {% unless text_alignment == 'center' %}sm:hidden{% endunless %}
