--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -243,6 +243,14 @@ Supported variables
                 </div>
               
             </div>
+<style>
+  .collection_product_below_icon_text_new {
+    margin-top: 25px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+</style>
 
 {% comment %}
   end custom code
