--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -210,7 +210,23 @@ Supported variables
       {%- endcapture -%}
       {%- render 'product-rating', product: product, class: rating_class, display_mode: settings.product_rating_mode -%}
     {%- endif -%}
+    {% comment %}
+    Start info code
+    {% endcomment %}
 
+    <div class="brand_collection_image">
+      <div class="brand_collection_one">
+        <p>
+          <i class='fa fa-coffee' style='font-size:16px'></i>&nbsp 20 cups</p>
+      </div>
+      <div class="brand_collection_one">
+        <p><img src="https://cdn.shopify.com/s/files/1/0024/6759/4339/files/102737002-prescription-pills-bottle-linear-icon-thin-line-illustration-medications-contour-symbol-vector-isola-removebg-preview.png?v=1628359070" style='font-size:16px'>&nbsp 250 gms</p>
+      </div>
+    </div>
+
+    {% comment %}
+    end info code
+    {% endcomment %}
     {%- if settings.product_color_display != 'hide' and show_swatches != false -%}
       {%- assign color_label_list = 'general.label.color' | t | replace: ', ', ',' | downcase | split: ',' -%}
 
