--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -79,6 +79,7 @@ all events, dependencies...) in the "documentation.txt" file, located in the Ass
         type="image/png">{%- endif -%}
 
     {{ content_for_header }}
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
     {{- 'theme.css' | asset_url | stylesheet_tag: preload: true -}}
   </head>
