--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -214,6 +214,32 @@ Supported variables
     Start info code
     {% endcomment %}
 
+    <style>
+
+      .brand_collection_image {
+        display: flex;
+        width: 100%;
+        border-top: 3px solid #fff;
+        margin-top: 10px;
+      }
+      .brand_collection_one {
+        width: 50%;
+        padding-top: 6px;
+      }
+      .brand_collection_one img {
+        width: 23px;
+        padding: 0;
+      }
+      .brand_collection_one p {
+        display: flex;
+        align-items: center;
+        padding: 0 0 0 30px;
+        font-family: Rubik, sans-serif;
+        font-weight: 500;
+        text-transform: uppercase;
+      }
+    </style>
+
     <div class="brand_collection_image">
       <div class="brand_collection_one">
         <p>
