--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -216,6 +216,16 @@ Supported variables
 
     <style>
 
+      .brand_collection_image {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+        padding-inline: 50px;
+        padding-block: 20px;
+
+      }
 
       .brand_collection_one {
         width: 50%;
