--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -238,7 +238,7 @@ Supported variables
       }
       .brand_collection_one p {
         display: flex;
-        align-items: center;
+        align-items: stretch;
         padding: 0 0 0 30px;
         font-family: Rubik, sans-serif;
         font-weight: 500;
