--- a/sections/featured-product.liquid
+++ b/sections/featured-product.liquid
@@ -98,7 +98,7 @@
             {%- when 'description' -%}
             <div class="product-info__description" {{ block.shopify_attributes }}>
               <div class="prose">
-                {{- 'product.metafields.custom.short_description' | t -}}
+                {{- 'general.on_boarding.product_description' | t -}}
               </div>
             </div>
 
